# TonyPYtony

./: .gitignore  LICENSE  README.md  README.md.md  index.html  interpreter.py  pyproject.toml  register_tony.py  run_tony.bat  setup.py  setup_env.py
scripts/: setup_env.py
tonypytony/: interpreter.py  register_tony.py
