[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tonypytony"
version = "0.1.0"
description = "TonyPytony Language"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Federic, Garnaaax e Mattia De Vincentis"}]

dependencies = [
    "colorama"
]

[project.scripts]
tony = "tonypytony.interpreter:main"
tony-setup = "tonypytony.install_tony:install"

